--- a/index.html
+++ b/index.html
@@ -16,17 +16,34 @@
 
 <body>
 
-  <!-- Currently I'm just testing whether the fonts successfully imported,
-but I can't help but suspect user error before any other explanation...
-If you can figure out what changes need to be made to make this work,
-can you walk me through your troubleshooting process? -->
+  <section class="homepage">
 
-<p class="osgardtest">Osgard</p>
-<br>
-<p class="eccentrictest">Eccentric</p>
+    <img src="img/albumart_desktop.jpg" alt="">
 
+    <div class="bulletin">
+      <h1>Afterburner<br>Now On Vinyl</h1>
+      <p>
+        Our new and improved merch store has a
+        limited edition release of the<br>Afterburner
+        album on vinyl. Once they’re out of stock,
+        you may never get a<br>chance to buy one again,
+        so pick one up while there’s still time!
+      </p>
+    </div>
 
+  </section>
 
+  <section>
+    <nav>
+      <ul>
+        <li><a href="/index.html">Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li class="navbadge"><a href="/index.html">Dance Gavin Dance</a></li>
+        <li><a href="/shop.html">Shop</a></li>
+        <li><a href="/tour.html">Tour</a></li>
+      </ul>
+    </nav>
+  </section>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
