--- a/index.html
+++ b/index.html
@@ -14,36 +14,36 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
+<body class="home_order">
 
-  <section class="homepage">
+  <!-- Currently I'm just testing whether the fonts successfully imported,
+but I can't help but suspect user error before any other explanation...
+If you can figure out what changes need to be made to make this work,
+can you walk me through your troubleshooting process? -->
 
-    <img src="img/albumart_desktop.jpg" alt="">
+<nav>
+  <ul>
+    <li><a href="">Home</a></li>
+    <li><a href="">About</a></li>
+    <li><span>Dance Gavin Dance</span></li>
+    <li><a href="">Shop</a></li>
+    <li><a href="">Tour</a></li>
+  </ul>
+</nav>
 
-    <div class="bulletin">
-      <h1>Afterburner<br>Now On Vinyl</h1>
-      <p>
-        Our new and improved merch store has a
-        limited edition release of the<br>Afterburner
-        album on vinyl. Once they’re out of stock,
-        you may never get a<br>chance to buy one again,
-        so pick one up while there’s still time!
-      </p>
-    </div>
+<section class="home_hero">
+  <div class="left_align">
+  <h1>Afterburner
+    <br/>
+    Now on Vinyl
+  </h1>
 
-  </section>
+  <p>Content...</p>
+  </div>
 
-  <section>
-    <nav>
-      <ul>
-        <li><a href="/index.html">Home</a></li>
-        <li><a href="/about.html">About</a></li>
-        <li class="navbadge"><a href="/index.html">Dance Gavin Dance</a></li>
-        <li><a href="/shop.html">Shop</a></li>
-        <li><a href="/tour.html">Tour</a></li>
-      </ul>
-    </nav>
-  </section>
+</section>
+
+
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
