--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>PUT TITLE HERE!</title>
+  <title>Dance Gavin Dance</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -16,18 +16,13 @@
 
 <body class="home_order">
 
-  <!-- Currently I'm just testing whether the fonts successfully imported,
-but I can't help but suspect user error before any other explanation...
-If you can figure out what changes need to be made to make this work,
-can you walk me through your troubleshooting process? -->
-
 <nav>
   <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
     <li><span>Dance Gavin Dance</span></li>
-    <li><a href="">Shop</a></li>
-    <li><a href="">Tour</a></li>
+    <li><a href="shop.html">Shop</a></li>
+    <li><a href="tour.html">Tour</a></li>
   </ul>
 </nav>
 
@@ -39,6 +34,16 @@ can you walk me through your troubleshooting process? -->
   </h1>
 
   <p>Content...</p>
+
+  <div class="diamonds">
+    <ul>
+      <li><div class="rotateme"></div></li>
+      <li><div class="rotateme" id="specialrotateme"></div></li>
+      <li><div class="rotateme"></div></li>
+      <li><div class="rotateme"></div></li>
+      <li><div class="rotateme"></div></li>
+    </ul>
+  </div>
   </div>
 
 </section>
