--- a/about.html
+++ b/about.html
@@ -1,14 +1,9 @@
-<!doctype html>
+       <!doctype html>
 <html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
-  <title><!doctype html>
-<html class="no-js" lang="">
-
-<head>
-  <meta charset="utf-8">
-  <title>About</title>
+  <title>Dance Gavin Dance</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -21,11 +16,12 @@
 
 <body class="home_order">
 
+
 <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><span>Dance Gavin Dance</span></li>
+    <li><a href="index.html"><span>Dance Gavin Dance</span></a></li>
     <li><a href="shop.html">Shop</a></li>
     <li><a href="tour.html">Tour</a></li>
   </ul>
@@ -38,65 +34,32 @@
     Now on Vinyl
   </h1>
 
-  <p>Content...</p>
-  </div>
-</section>
-
-<section class="about_content">
-
-
-</section>
-
-
-
-
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/main.js"></script>
-
-</body>
-
-</html>
-</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
-</head>
-
-<body class="home_order">
-
-  <!-- Currently I'm just testing whether the fonts successfully imported,
-but I can't help but suspect user error before any other explanation...
-If you can figure out what changes need to be made to make this work,
-can you walk me through your troubleshooting process? -->
-
-<nav>
-  <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About</a></li>
-    <li><span>Dance Gavin Dance</span></li>
-    <li><a href="">Shop</a></li>
-    <li><a href="">Tour</a></li>
-  </ul>
-</nav>
-
-<section class="home_hero">
-  <div class="left_align">
-  <h1>Afterburner
-    <br/>
-    Now on Vinyl
-  </h1>
-
-  <p>Content...</p>
+  <p>
+    Our new and improved merch store has a
+      limited edition release of the<br>Afterburner
+      album on vinyl. Once they’re out of stock,
+      you may never get a<br>chance to buy one again,
+      so pick one up while there’s still time!
+  </p>
   </div>
 
+  <div class="diamonds">
+     <ul>
+       <li><div class="rotateme" id="rotateme_HL"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+     </ul>
+   </div>
+
 </section>
 
-
+<section class="aboutpage">
+  <div class="about_hero">
+    <img src="img/groupphoto.jpg" alt="">
+  </div>
+</section>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
