--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+       <!doctype html>
 <html class="no-js" lang="">
 
 <head>
@@ -16,11 +16,12 @@
 
 <body class="home_order">
 
+
 <nav>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><span>Dance Gavin Dance</span></li>
+    <li><a href="index.html"><span>Dance Gavin Dance</span></a></li>
     <li><a href="shop.html">Shop</a></li>
     <li><a href="tour.html">Tour</a></li>
   </ul>
@@ -33,22 +34,26 @@
     Now on Vinyl
   </h1>
 
-  <p>Content...</p>
+  <p>
+    Our new and improved merch store has a
+      limited edition release of the<br>Afterburner
+      album on vinyl. Once they’re out of stock,
+      you may never get a<br>chance to buy one again,
+      so pick one up while there’s still time!
+  </p>
+  </div>
 
   <div class="diamonds">
-    <ul>
-      <li><div class="rotateme"></div></li>
-      <li><div class="rotateme" id="specialrotateme"></div></li>
-      <li><div class="rotateme"></div></li>
-      <li><div class="rotateme"></div></li>
-      <li><div class="rotateme"></div></li>
-    </ul>
-  </div>
-  </div>
+     <ul>
+       <li><div class="rotateme" id="rotateme_HL"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+     </ul>
+   </div>
 
 </section>
-
-
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
