TIM EDITS/Font fixes + Page Layouts + Others
What I did:
- Fixed why the fonts where showing up
   - in CSS, you needed to add the "../fonts/" to the front of where your fonts where located...MacOS sometimes is set to auto find items in associated folders, so using strict paths helps.
   - Your font-family declarations where incorrect (i.ee: font-family: 'osgard' didn't work on my end but when I updated to "osgardregular" it did...same for eccentric as well.
- Added some structure and styles for the child pages so you don't get the column reversal thing we have on the index.html...I wrapped the about page in a div with a class called childpage_order and cloned some style to make sure everything still works as you designed.
- Added in some basic hover states for your navbar! check out that section in your CSS to see how it gives the large background color change with padding and margin.
- About Page...you can see how it's setup now, but biggest edit was the group photo...instead of an <img> tag on the page...just made it a background image for that div.

what you'll do next:
- Additional content for About
- Clone stuff for tour page and begin working on tour dates (make one of them and just rinse and repeat)

--- a/about.html
+++ b/about.html
@@ -14,20 +14,11 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="home_order">
+<body>
 
-
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="index.html"><span>Dance Gavin Dance</span></a></li>
-    <li><a href="shop.html">Shop</a></li>
-    <li><a href="tour.html">Tour</a></li>
-  </ul>
-</nav>
-
-<section class="home_hero">
+  <!-- made some new styles...cloned from home and made into childpage. Childpage order reorders the content and child hero will style the hero section for the hero section. -->
+<div class="childpage_order">
+<section class="child_hero">
   <div class="left_align">
   <h1>Afterburner
     <br/>
@@ -55,11 +46,22 @@
 
 </section>
 
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="index.html" id="gavinlink"><span>Dance Gavin Dance</span></a></li>
+    <li><a href="shop.html">Shop</a></li>
+    <li><a href="tour.html">Tour</a></li>
+  </ul>
+</nav>
+
+<!-- This the above changes and childpage_order wrapping everything to reorder everything, the about page now has the background image working. Instead of putting in the img tag for the about hero...I styled it to be the background image. Then after the about_hero div,  you can add your content below. -->
 <section class="aboutpage">
   <div class="about_hero">
-    <img src="img/groupphoto.jpg" alt="">
   </div>
 </section>
+</div>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
