--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
-    <li><a href="index.html"><span>Dance Gavin Dance</span></a></li>
+    <li><a href="index.html" id="gavinlink"><span>Dance Gavin Dance</span></a></li>
     <li><a href="shop.html">Shop</a></li>
     <li><a href="tour.html">Tour</a></li>
   </ul>
