--- a/about.html
+++ b/about.html
@@ -58,9 +58,25 @@
 
 <!-- This the above changes and childpage_order wrapping everything to reorder everything, the about page now has the background image working. Instead of putting in the img tag for the about hero...I styled it to be the background image. Then after the about_hero div,  you can add your content below. -->
 <section class="aboutpage">
-  <div class="about_hero">
-  </div>
+
+  <div class="about_hero"></div>
+
+  <h4>About Us</h4>
+
+  <p>
+    Dance Gavin Dance is an American rock band from Sacramento, California,
+    formed in 2005. The band currently consists of vocalists Tilian Pearson and
+    Jon Mess, lead guitarist Will Swan, bass guitarist Tim Feerick, and drummer
+    Matthew Mingus. The band formerly included lead vocalists Jonny Craig and
+    Kurt Travis, and the lineup has changed several times since their inception.
+    Swan and Mingus are the only band members who have appeared on every studio
+    album.
+  </p>
+
 </section>
+
+
+
 </div>
 
 
