--- a/tour.html
+++ b/tour.html
@@ -1,9 +1,9 @@
-<!doctype html>
+       <!doctype html>
 <html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
-  <title>Tour</title>
+  <title>Dance Gavin Dance</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,34 +14,255 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="home_order">
+<body>
 
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><span>Dance Gavin Dance</span></li>
-    <li><a href="shop.html">Shop</a></li>
-    <li><a href="tour.html">Tour</a></li>
-  </ul>
-</nav>
-
-<section class="home_hero">
+<div class="childpage_order">
+<section class="child_hero">
   <div class="left_align">
   <h1>Afterburner
     <br/>
     Now on Vinyl
   </h1>
 
-  <p>Content...</p>
+  <p>
+    Our new and improved merch store has a
+      limited edition release of the<br>Afterburner
+      album on vinyl. Once they’re out of stock,
+      you may never get a<br>chance to buy one again,
+      so pick one up while there’s still time!
+  </p>
   </div>
+
+  <div class="diamonds">
+     <ul>
+       <li><div class="rotateme" id="rotateme_HL"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+     </ul>
+   </div>
+
 </section>
 
-<section class="tour_content">
+<nav>
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="index.html" id="gavinlink"><span>Dance Gavin Dance</span></a></li>
+    <li><a href="shop.html">Shop</a></li>
+    <li><a href="tour.html">Tour</a></li>
+  </ul>
+</nav>
+
+<!-- This the above changes and childpage_order wrapping everything to reorder everything, the about page now has the background image working. Instead of putting in the img tag for the about hero...I styled it to be the background image. Then after the about_hero div,  you can add your content below. -->
+<section class="tourpage">
+
+  <div class="tour_hero">
+    <h3>Afterburner Tour</h3>
+  </div>
+
+  <div class="tourflames">
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        September
+        <br>
+        <span>24</span>
+      </div>
+
+      <div class="tourdate_location">
+        Whoopsie Daisy's Bar & Grille
+        <br>
+        <span>Accident, MD, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        September
+        <br>
+        <span>27</span>
+      </div>
+
+      <div class="tourdate_location">
+        Jones' BBQ & Foot Massage
+        <br>
+        <span>Chicago, IL, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        September
+        <br>
+        <span>30</span>
+      </div>
+
+      <div class="tourdate_location">
+        A Hot Topic in Times Square
+        <br>
+        <span>New York, NY, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        October
+        <br>
+        <span>04</span>
+      </div>
+
+      <div class="tourdate_location">
+        Nowhereville Music Festival
+        <br>
+        <span>No Name, CO, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        October
+        <br>
+        <span>08</span>
+      </div>
+
+      <div class="tourdate_location">
+        Bruce Wayne's Actual House
+        <br>
+        <span>Bat Cave, NC, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        October
+        <br>
+        <span>13</span>
+      </div>
+
+      <div class="tourdate_location">
+        Jason's Marina
+        <br>
+        <span id="OCT13">Blairstown, NJ, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        October
+        <br>
+        <span>31</span>
+      </div>
+
+      <div class="tourdate_location">
+        Skellington Stadium
+        <br>
+        <span>St. Helens, OR, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        November
+        <br>
+        <span>01</span>
+      </div>
+
+      <div class="tourdate_location">
+        Who's On First
+        <br>
+        <span>Why, AZ, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        November
+        <br>
+        <span>02</span>
+      </div>
+
+      <div class="tourdate_location">
+        What's on Second
+        <br>
+        <span>Whynot, NC, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        November
+        <br>
+        <span>26</span>
+      </div>
+
+      <div class="tourdate_location">
+        AT&T Stadium
+        <br>
+        <span>Arlington, TX, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate">
+
+      <div class="tourdate_box">
+        December
+        <br>
+        <span>01</span>
+      </div>
+
+      <div class="tourdate_location">
+        Whoopsie Daisy's Bar & Grille
+        <br>
+        <span>Accident, MD, USA</span>
+      </div>
+
+    </div>
+
+    <div class="tourdate" id="laststop">
+
+      <div class="tourdate_box">
+        December
+        <br>
+        <span>25</span>
+      </div>
+
+      <div class="tourdate_location">
+        The North Pole
+        <br>
+        <span>The Arctic Ocean</span>
+      </div>
+
+    </div>
+  </div>
 
 
 </section>
 
+
+
+</div>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
