TIM EDITS/Sticky Nav + Beginning Mobile Styles
What I did:
- Added in Sticky nav on scroll for other pages
- Cleaned up a few CSS styles
- Began to setup CSS Styles for mobile (see the media queries section)

What you'll do next:
- Shop page
- Mobile Styles
- Favicon...then done!

--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
 
 </section>
 
-<nav>
+<nav id="navbar">
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
@@ -57,7 +57,7 @@
 </nav>
 
 <!-- This the above changes and childpage_order wrapping everything to reorder everything, the about page now has the background image working. Instead of putting in the img tag for the about hero...I styled it to be the background image. Then after the about_hero div,  you can add your content below. -->
-<section class="aboutpage">
+<section class="aboutpage content">
 
   <div class="about_hero"></div>
 
@@ -74,8 +74,6 @@
   </p>
 
 </section>
-
-
 
 </div>
 
