--- a/shop.html
+++ b/shop.html
@@ -16,17 +16,17 @@
 
 <body class="home_order">
 
-<nav>
-  <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><span>Dance Gavin Dance</span></li>
-    <li><a href="shop.html">Shop</a></li>
-    <li><a href="tour.html">Tour</a></li>
-  </ul>
-</nav>
+  <nav id="navbar">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="about.html">About</a></li>
+      <li><a href="index.html" id="gavinlink"><span>Dance Gavin Dance</span></a></li>
+      <li><a href="shop.html">Shop</a></li>
+      <li><a href="tour.html">Tour</a></li>
+    </ul>
+  </nav>
 
-<section class="home_hero">
+<section class="home_hero content">
   <div class="left_align">
   <h1>Afterburner
     <br/>
