--- a/tour.html
+++ b/tour.html
@@ -45,7 +45,7 @@
 
 </section>
 
-<nav>
+<nav id="navbar">
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
@@ -56,7 +56,7 @@
 </nav>
 
 <!-- This the above changes and childpage_order wrapping everything to reorder everything, the about page now has the background image working. Instead of putting in the img tag for the about hero...I styled it to be the background image. Then after the about_hero div,  you can add your content below. -->
-<section class="tourpage">
+<section class="tourpage content">
 
   <div class="tour_hero">
     <h3>Afterburner Tour</h3>
