--- a/shop.html
+++ b/shop.html
@@ -1,9 +1,9 @@
-<!doctype html>
+       <!doctype html>
 <html class="no-js" lang="">
 
 <head>
   <meta charset="utf-8">
-  <title>Shop</title>
+  <title>Dance Gavin Dance</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -14,34 +14,108 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body class="home_order">
+<body>
 
-  <nav id="navbar">
-    <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="about.html">About</a></li>
-      <li><a href="index.html" id="gavinlink"><span>Dance Gavin Dance</span></a></li>
-      <li><a href="shop.html">Shop</a></li>
-      <li><a href="tour.html">Tour</a></li>
-    </ul>
-  </nav>
-
-<section class="home_hero content">
+<div class="childpage_order">
+<section class="child_hero">
   <div class="left_align">
   <h1>Afterburner
     <br/>
     Now on Vinyl
   </h1>
 
-  <p>Content...</p>
+  <p>
+    Our new and improved merch store has a
+      limited edition release of the<br>Afterburner
+      album on vinyl. Once they’re out of stock,
+      you may never get a<br>chance to buy one again,
+      so pick one up while there’s still time!
+  </p>
   </div>
+
+  <div class="diamonds">
+     <ul>
+       <li><div class="rotateme" id="rotateme_HL"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+       <li><div class="rotateme"></div></li>
+     </ul>
+   </div>
+
 </section>
 
-<section class="shop_content">
+<nav id="navbar">
+  <ul>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="index.html" id="gavinlink"><span>Dance Gavin Dance</span></a></li>
+    <li><a href="shop.html">Shop</a></li>
+    <li><a href="tour.html">Tour</a></li>
+  </ul>
+</nav>
 
+<section class="shoppage">
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
+
+  <div class="shop_item">
+  </div>
 
 </section>
 
+
+
+</div>
 
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
