--- a/shop.html
+++ b/shop.html
@@ -249,6 +249,8 @@ if (count == 5) {
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/cart.js"></script>
+
 
 </body>
 
