--- a/shop.html
+++ b/shop.html
@@ -18,6 +18,14 @@
 
 <body>
 
+  <div id="mySidenav" class="sidenav">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="shop.html">Shop</a>
+    <a href="tour.html">Tour</a>
+  </div>
+
 <div class="childpage_order">
 
 <section class="child_hero">
@@ -157,6 +165,8 @@
 </section>
 
 <nav id="navbar">
+  <span class="hamburger" onclick="openNav()">&#9776;</span>
+  <p id="gavinmobile">Dance Gavin Dance</p>
   <ul>
     <li><a href="index.html">Home</a></li>
     <li><a href="about.html">About</a></li>
