--- a/tour.html
+++ b/tour.html
@@ -7,8 +7,7 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+   <link rel="icon" href="favicon.ico" type="image/gif" sizes="16x16">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
@@ -39,8 +38,8 @@
   </h1>
 
   <p class="animate__animated animate__fadeIn animate__slow">
-    Our new and improved merch store has a limited edition release of the<br>
-    Afterburner album on vinyl. Once they’re out of stock,you may never get a<br>
+    Our new and improved merch store has a limited edition release of the <br>
+    Afterburner album on vinyl. Once they’re out of stock, you may never get a <br>
     chance to buy one again, so pick one up while there’s still time!
   </p>
   </div>
@@ -66,8 +65,8 @@
 
     <p class="animate__animated animate__fadeIn animate__slow">
       Swanfest at Papa Murphy's Park at Cal Expo initially scheduled
-      for April 25,<br>2020 has been rescheduled to April 24, 2021. There
-      is nothing you need to do<br>as your tickets will be valid for the new date.
+      for April 25, <br>2020 has been rescheduled to April 24, 2021. There
+      is nothing you need to do <br>as your tickets will be valid for the new date.
     </p>
     </div>
 
@@ -92,8 +91,8 @@
 
       <p class="animate__animated animate__fadeIn animate__slow">
         Ever since “Chucky Vs. The Giant Tortoise,” one ore two fans have been
-        dreaming<br>of having a DGD-branded salsa based on one of Jon Mess’ most
-        iconic lyrics.<br> Now they can finally find Riding A Rhino Pico De Gallo
+        dreaming <br>of having a DGD-branded salsa based on one of Jon Mess’ most
+        iconic lyrics. <br> Now they can finally find Riding A Rhino Pico De Gallo
         at most major grocers
       </p>
       </div>
@@ -119,8 +118,8 @@
 
         <p class="animate__animated animate__fadeIn animate__slow">
           To celebrate the Holidays, we're offering a 70% discount on everything
-          in our<br>merch store until January 30th, 2021. Time is ticking, so don't
-          wait too long<br>or you'll miss your chance!
+          in our <br>merch store until January 30th, 2021. Time is ticking, so don't
+          wait too long <br>or you'll miss your chance!
         </p>
         </div>
 
@@ -145,8 +144,8 @@
 
           <p class="animate__animated animate__fadeIn animate__slow">
             Welcome to the new online home of Dance Gavin Dance! This website is
-            actually<br>just a project for an introductory web design course and
-            is strictly for<br>educational purposes, unless DGD is interested in
+            actually <br>just a project for an introductory web design course and
+            is strictly for <br>educational purposes, unless DGD is interested in
             hiring a new web designer ;)
           </p>
           </div>
