--- a/shop.html
+++ b/shop.html
@@ -168,18 +168,10 @@
   <p id="gavinmobile" class="pushme">Dance Gavin Dance</p>
   <li id="navcart" class="showhidecart">
 
-    <div class="cart">
+    <div class="mcart">
 
-      <script type="text/javascript">
-        var clicks = 0;
-        function onClick() {
-        clicks += 1;
-        document.getElementById("clicks").innerHTML = clicks;
-        };
-      </script>
-
-      <div class="cartcounter">
-          <a id="clicks">0</a>
+      <div class="mcartcounter">
+          <a id="mclicks">0</a>
       </div>
 
     </div>
@@ -835,7 +827,6 @@
 </section>
 
 
-<script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script>
 var currentDiv = $("#a");
 var nextDiv, count = 1;
@@ -859,7 +850,6 @@ if (count == 5) {
 </div>
 
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/main.js"></script>
   <script src="js/cart.js"></script>
 
